# ferias-libres-data

./: .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  api.py  cli.py  pyproject.toml
.github/workflows/: Tests.yml
ferias_libres/: __init__.py  archivo_destino.json  comunas_geoloc.json  configuracion.py  database.py  flask_app.py  middleware.py  models.py  schemas.py  settings.py  typer_app.py  version.py
ferias_libres/admin/: mixins.py  site.py  views.py
ferias_libres/api/: __init__.py  ns_admin.py  ns_comunas.py  ns_datos.py  ns_ferias.py
ferias_libres/catastroferiaslibres/: README.md  __init__.py
ferias_libres/catastroferiaslibres/archivos_json/: region_13.json
ferias_libres/migrations/: alembic.ini
ferias_libres/migrations/versions/: 1c4a244f8317_slug.py  22d0cdc5c886_slug_unique.py  626f6db311db_mapped.py  771a438591c5_init.py  82c359d6a28d_feria.py  8afdd4d03364_feria_pk.py  9e62063519e5_ferias_y_comunas.py  acc25e8c5fba_init.py
ferias_libres/odepa/: __init__.py
ferias_libres/templates/: index.html
tests/: tests_base.py
