[tool.poetry]
name = "ferias-libres-data"
version = "0.1.0"
description = "Archivos de datos para Ferias Libres"
authors = ["Mario Hernandez <mariofix@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ferias_libres"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "*"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic-settings = "^1.99"
python-slugify = "^8.0.1"
flask-admin = "^1.6.1"
flask = "^2.3.2"
flask-restx = "^1.1.0"
flask-http-middleware = "^0.3.1"
flask-migrate = "^4.0.4"
python-dotenv = "*"
flask-debugtoolbar = "*"
flask-babel = "^3.1.0"
sqlalchemy-repr = "*"
thankyou = "*"
pymysql = "*"
bcrypt = "*"
python-multipart = "*"
flask-security-too = {extras = ["babel", "common", "sqla"], version = "*"}
sqlalchemy-mixins = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
coverage = "*"
isort = "*"
pre-commit = "*"
pyupgrade = "*"
autopep8 = "^2.0.2"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
python_files =[
    "test*.py"
]

[tool.poetry.scripts]
ferias-libres = 'cli:app'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
