[tool.poetry]
name = "ferias-libres-data"
version = "0.2.1"
description = "Archivos de datos para Ferias Libres"
authors = ["Mario Hernandez <mariofix@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ferias_libres"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
typer = {version = "^0.9.0", extras = ["all"]}
pydantic-settings = "^2.0.1"
python-slugify = "^8.0.1"
flask-admin = "^1.6.1"
flask = "^2.3.2"
flask-restx = "^1.1.0"
flask-http-middleware = "^0.3.1"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
flask-debugtoolbar = "^0.13.1"
flask-babel = "^3.1.0"
sqlalchemy-repr = "^0.1.0"
thankyou = "^0.0.3"
pymysql = "^1.1.0"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
flask-security-too = {version = "^5.2.0", extras = ["babel", "common", "sqla"]}
sqlalchemy-mixins = "^2.0.3"
sentry-sdk = {version = "^1.28.0", extras = ["flask"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"

[tool.autopep8]
max_line_length = 119
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 119
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
python_files =[
    "test*.py"
]

[tool.poetry.scripts]
ferias-libres = 'cli:app'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5
py_version = 311

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
